# learning

./: .gitignore
curl/: CMakeLists.txt
curl/big-file-curl/: CMakeLists.txt  http-curl-range-download.cpp  thread_pool.cpp  thread_pool.h
curl/curl-class/: CMakeLists.txt  curl-client.cpp  curl-client.h  test.cpp
curl/example/ftp/: CMakeLists.txt  ftp_client.cpp  ftptestdownload.cpp  ftptestupload.cpp
curl/example/sftp/: CMakeLists.txt  sftptestupload.cpp
curl/http-get/: CMakeLists.txt  http-get.cpp
curl/http-post/: CMakeLists.txt  http-post-2.cpp  http-post.cpp  test-curl_version.txt
curl/sftp-url-PersistentList/: CMakeLists.txt  demo.cpp
epoll/: CMakeLists.txt  client.cpp  epoll_event_fd.cpp  server-ptr.cpp  server.cpp
gSOAP/: CMakeLists.txt  README.md
gSOAP/1-hello_world/: CMakeLists.txt  hello.cpp  hello.h  myapp.cpp
gSOAP/2-hello_world-rest-api/: CMakeLists.txt  api.cpp  api.h  myapp.cpp
gSOAP/3-1-calc/: CMakeLists.txt  calc-client.cpp  calc-server.cpp
gSOAP/3-2-calc/: CMakeLists.txt  calc-client.cpp  calc-server.cpp  calc.h
gSOAP/3-3-calc/: CMakeLists.txt  calc-client.cpp  calc-mul-thread-server.cpp
gSOAP/3-4-calc/: CMakeLists.txt  calc-mul-thread-server.cpp
gSOAP/3-5-calc/: CMakeLists.txt  HttpService.cpp  calc-mul-thread-server.cpp
gSOAP/3-6-calc/: CMakeLists.txt  HttpService.cpp  HttpService.h  calc-client.cpp  calc-index.html  calc-mul-thread-server.cpp
hbase-thrift/: CMakeLists.txt  README.md  set.sh
hbase-thrift/Hbase-Client-Class/: CMakeLists.txt  demo.cpp  hbcli.cpp  hbcli.h  testput.cpp
hbase-thrift/demo/: CMakeLists.txt  thrift-0.10.0-demo.cpp  thrift-0.10.0-demo2.cpp  thrift-0.16.0-demo.cpp  thrift-0.16.0-demo2.cpp
hiredis/: CMakeLists.txt  demo.cpp  set.sh
libmysqlclient/: CMakeLists.txt  test1.cpp  test2.cpp
libmysqlclient/mysqlclient/: mysqlclient.cpp  mysqlclient.h
librdkafkacpp/: CMakeLists.txt  README.md
librdkafkacpp/class/: Consumer-demo.cpp  KafkaConsumer.cpp  KafkaConsumer.h  KafkaProducer.cpp  KafkaProducer.h  Producer-demo.cpp
librdkafkacpp/config/: consumer.cfg  producer.cfg
librdkafkacpp/example/: example-Consumer.cpp  example-Producer.cpp
libssh2/: CMakeLists.txt  set.sh
libssh2/example/: sftpdir.c
libtorch/: CMakeLists.txt  dcgan.cpp  set.sh
log/log_h-log4cplus/: CMakeLists.txt  Log.cpp  Log.h  README.md  log4cplus-2.properties  log4cplus.properties  set.sh  test.cpp
log/log_h-log4cxx/: CMakeLists.txt  Log-0-9-7.cpp  Log-0-9-7.h  Log.cpp  Log.h  README.md  demo.cpp  log4cxx-0.9.7.properties  log4cxx.properties  set.sh
log/log_h-spdlog/: CMakeLists.txt  Log.cpp  Log.h  README.md  demo.cpp  set.sh
mapReduce/: counting-ip.cpp
modern-cpp/: CMakeLists.txt
modern-cpp/atomic/: CMakeLists.txt  atomic.cpp  mutex.cpp
modern-cpp/condition_variable/: CMakeLists.txt  test.cpp
modern-cpp/emplace_back/: CMakeLists.txt  test.cpp
modern-cpp/poller/: CMakeLists.txt  Poller.cpp  Poller.h  test.cpp
net-snmp/: CMakeLists.txt
net-snmp/class/: SnmpClient.cpp  SnmpClient.h  SnmpManager.cpp  SnmpManager.h  classdemo.cpp
net-snmp/cmd2XdrDemo/: Cmd2Xdr.h  Snmp2Xdr.cpp  Snmp2Xdr.h  demo.cpp
net-snmp/src/: asyncapp.c  demo.cpp  demo2.cpp  demo_snmpwalk.c  snmpdemoapp.c  snmpwalk.c
onenet-mqtt/: CMakeLists.txt  README.md  set.sh
onenet-mqtt/OneNET-Token-no-openssl/: CMakeLists.txt  HMAC_SHA1.cpp  HMAC_SHA1.h  SHA1.cpp  SHA1.h  Token-no-openssl.cpp  ZBase64.cpp  ZBase64.h
onenet-mqtt/OneNET-Token-openssl/: CMakeLists.txt  token.cpp
onenet-mqtt/cjson_demo/: CMakeLists.txt  cjson_demo.cpp
onenet-mqtt/demo/: CMakeLists.txt  sub-pub.cpp
onenet-mqtt/demo_onenet_studio_sdk/: CMakeLists.txt  device-export.csv  main.c  main.cpp  tm_user.c  tm_user.h
onenet-mqtt/gateway_sub-device/: CMakeLists.txt  devices.json  onenet-gateway.cpp  sub-device.cpp
onenet-mqtt/mqtt-class/: CMakeLists.txt  MQTTCli.cpp  MQTTCli.h  OneNET.cpp  OneNET.h  publish.cpp  subscribe.cpp
onenet-mqtt/onejson/: CMakeLists.txt  onejson.cpp  onejson.h  test_pack_json.cpp
openssl/: CMakeLists.txt  README.md
openssl/OpenSSL-Client-Server-with-BIO/: CMakeLists.txt  cert.pem  key.pem
openssl/OpenSSL-Client-Server-with-BIO/Client/: OpenSSL_BIO_Client.h
openssl/OpenSSL-Client-Server-with-BIO/Server/: Main.cpp  OpenSSL_BIO_Server.cpp  OpenSSL_BIO_Server.h
openssl/TLS_Svr/: CMakeLists.txt  TLS_Svr.cpp  TLS_Svr.h  server.cpp  server.crt  set.sh
openssl/openssl-example/: CMakeLists.txt  async-ssl-svr.cc
openssl/opensslTesting/: CMakeLists.txt  client.c  common.c  common.h  server.c  sslthread.c  sslthread.h  sslthreads.h
openssl/openssl_examples/: CMakeLists.txt  common.h  server.key  ssl_server_nonblock.c
simple-callback-log/: demo.cpp  log-macro.cpp  log-macro.h  set.sh
system-popen/: CMakeLists.txt  compare-system-popen.cpp  test-popen.cpp  test-system.cpp
threadpool/: CMakeLists.txt
threadpool/C-thread-pool/: CMakeLists.txt  heavy.c  shutdown.c  thrdtest.c  threadpool.c
threadpool/thread_pool_c++11/: CMakeLists.txt  test.cpp  thread_pool.h
threadpool/zl_threadpool/: CMakeLists.txt  README.md
threadpool/zl_threadpool/ThreadPoolCpp11/: ThreadPool.h  main.cpp
webserver/: CMakeLists.txt  README.md  demo.cpp  demo_myhttp.cpp  get-ckplayer-html.h  http-mp4.cpp  libuv-queue-demo.cpp  libuv-webserver-openssl.cpp  libuv-webserver.cpp  modify-mdtransform.h  myhttpserver.cpp  myhttpserver.h  set.sh  test_http_parser.cpp
webserver/MarkdownParser/: main.cpp  mdtransform.cpp  mdtransform.h
webserver/OpenSSL_Server/: OpenSSL_Server.cpp  OpenSSL_Server.h  cert.pem  key.pem
zeromq/: CMakeLists.txt  pub.cpp  sub.cpp
zlib/: CMakeLists.txt  README.md
zlib/gzip/: CMakeLists.txt  gunzip-test.cpp  gzip-test.cpp  set_attributes.h
zlib/untgz/: CMakeLists.txt  demo.cpp  modify-untgz.cpp  modify-untgz.h  untgz.c
zlib/zip-list/: CMakeLists.txt  unzip-gunzip.cpp  zip-list.cpp
zookeeper/: CMakeLists.txt  README.md
zookeeper/Configuration_Management/: config_mg.cpp
zookeeper/QueryServer/: QueryServer.cpp  QueryServerd.cpp
zookeeper/get_value/: demo.cpp
zookeeper/test_init/: zkClient.cpp
